# module-2_homework-14

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 20e9d0df4022_set_unique_false_on_contacts_email.py  bc58175d5fd4_init.py  ecfa3ab5de85_set_unique_false_on_contacts_email.py
src/conf/: config.ini  config.py
src/database/: db.py  models.py  redis_db.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_route_auth.py  test_unit_repository_cotacts.py  test_unit_repository_users.py
